[tool.poetry]
name = "rembg"
version = "0.0.0"  # Managed by poetry-dynamic-versioning
description = "Remove image background"
authors = ["Daniel Gatis <danielgatis@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/danielgatis/rembg"
repository = "https://github.com/danielgatis/rembg"
keywords = ["remove", "background", "u2net"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
packages = [{include = "rembg"}]

[tool.poetry.dependencies]
python = "^3.11"
jsonschema = "^4.25.1"
numpy = "^2.3.0"
pillow = "^12.1.0"
pooch = "^1.8.2"
pymatting = "^1.1.14"
scikit-image = "^0.26.0"
scipy = "^1.16.3"
tqdm = "^4.67.1"

# CPU backend (optional)
onnxruntime = {version = "^1.23.2", optional = true}

# GPU backend (optional) - only available on Linux/Windows, not on macOS
onnxruntime-gpu = {version = "^1.23.2", optional = true, markers = "sys_platform != 'darwin'"}

# ROCm backend (optional) - only available on Linux (latest is 1.22.x)
onnxruntime-rocm = {version = "^1.22.0", optional = true, markers = "sys_platform == 'linux'"}

# CLI dependencies (optional)
aiohttp = {version = "^3.13.2", optional = true}
asyncer = {version = "^0.0.12", optional = true}
click = {version = "^8.3.1", optional = true}
fastapi = {version = "^0.128.0", optional = true}
filetype = {version = "^1.2.0", optional = true}
gradio = {version = "^6.2.0", optional = true}
python-multipart = {version = "^0.0.21", optional = true}
sniffio = {version = "^1.3.1", optional = true}
uvicorn = {version = "^0.40.0", optional = true}
watchdog = {version = "^6.0.0", optional = true}

# Dev dependencies (optional, for pip install .[dev])
bandit = {version = "^1.9.2", optional = true}
black = {version = "^25.12.0", optional = true}
flake8 = {version = "^7.3.0", optional = true}
imagehash = {version = "^4.3.2", optional = true}
isort = {version = "^7.0.0", optional = true}
mypy = {version = "^1.19.1", optional = true}
pytest = {version = "^9.0.2", optional = true}

[tool.poetry.group.dev.dependencies]
bandit = "^1.9.2"
black = "^25.12.0"
flake8 = "^7.3.0"
imagehash = "^4.3.2"
isort = "^7.0.0"
mypy = "^1.19.1"
pytest = "^9.0.2"

[tool.poetry.extras]
cpu = ["onnxruntime"]
gpu = ["onnxruntime-gpu"]
rocm = ["onnxruntime-rocm"]
cli = ["aiohttp", "asyncer", "click", "fastapi", "filetype", "gradio", "python-multipart", "sniffio", "uvicorn", "watchdog"]
dev = ["bandit", "black", "flake8", "imagehash", "isort", "mypy", "pytest"]

[tool.poetry.scripts]
rembg = "rembg.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
pattern = "^v(?P<base>\\d+\\.\\d+\\.\\d+)"

[tool.poetry-dynamic-versioning.substitution]
files = ["rembg/__init__.py"]
